Fjernet asteroid splitting

--- a/AsteroidsEntityFramework/Player/pom.xml
+++ b/AsteroidsEntityFramework/Player/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <artifactId>Player</artifactId>
     <packaging>jar</packaging>
-
+    <name>Player</name>
     <build>
         <plugins>
             <plugin>
