--- a/Asteroids/pom.xml
+++ b/Asteroids/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>dk.sdu.mmmi.cbse</groupId>
     <artifactId>Asteroids</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <dependencies>
     </dependencies>
